--- a/MultipleThreeAndFive/MultipleThreeAndFive.Test/MultipleThreeAndFive.Test.csproj
+++ b/MultipleThreeAndFive/MultipleThreeAndFive.Test/MultipleThreeAndFive.Test.csproj
@@ -54,10 +54,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MultipleThreeAndFiveTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MultipleThreeAndFive\MultipleThreeAndFive.csproj">
+      <Project>{38597e99-7c8e-4d64-b6e3-1895e249eca4}</Project>
+      <Name>MultipleThreeAndFive</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
